Begin updating integration-test classes